--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
+
 <head>
-    <title>Unfiltered Thoughts</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/all.css">
-    <link rel="stylesheet" href="/styles/style.css">
-</head>
+<meta charset="utf-8">
+<title>Unfiltered Thoughts</title>
+<meta charset="utf-8">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<link rel="stylesheet" href="/styles/style.css">
+<nav class="navbar navbar-expand-lg">
+    <a class="navbar-brand" href="#">Unfiltered Thoughts</a>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About Us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact Us</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
 <body>
-    <header>
-        <div class="brand-logo">
-            <a href="#">Unfiltered Thoughts</a>
-        </div>
-        <input type="checkbox" id="toggle-btn">
-        <label for="toggle-btn" class="show-menu-btn"><i class="fas fa-bars"></i></label>
-        <nav>
-            <ul class="navigation">
-                <li><a href="#"><i class="fas fa-house-damage"></i> Home</a></li>
-                <li><a href="#"><i class="fas fa-question"></i> About Us</a></li>
-                <li><a href="#"><i class="fas fa-phone-alt"></i> Contact Us</a></li>
-                <label for="toggle-btn" class="hide-menu-btn"><i class="fas fa-times"></i></label>
-            </ul>
-        </nav>
-    </header>
-    <main>
+    <div class="container">
