--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -4,4 +4,9 @@ $bodyBg: #F2ECBE;
 $secondBg: #E2C799;
 nav{
     background-color: $headerBg;
+    color: #fff !important;
+    padding: 20px 20px !important;
+    ul{
+        margin-left: auto;
+    }
 }
