--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,13 +14,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="#">Home</a>
+                  <a class="nav-link text-white" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="#">About Us</a>
+                  <a class="nav-link text-white" href="/about">About Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="#">Contact Us</a>
+                  <a class="nav-link text-white" href="/contact">Contact Us</a>
                 </li>
               </ul>
             </div>
