--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,3 +1,5 @@
 <%- include('partials/header.ejs') %>
-
+<h2>About Us</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac lorem at massa eleifend suscipit. Maecenas id malesuada dui. Cras id metus nec urna eleifend consectetur vel ac libero. Suspendisse potenti. Vivamus sed lacus ac elit sollicitudin posuere eu ut nulla. Vivamus non tristique massa, ac vulputate turpis. Nullam ultrices posuere sapien, a condimentum nulla mattis non. Curabitur interdum dui et quam semper, ac aliquam quam fermentum.</p>
+<p>Fusce sed vestibulum purus. Morbi quis risus eget risus suscipit vulputate. Nulla facilisi. Proin nec libero ac dui viverra eleifend. Quisque bibendum elit nec massa rhoncus, eu fermentum urna condimentum. Suspendisse consectetur odio a diam imperdiet, id bibendum justo pharetra. Sed convallis lorem nec bibendum euismod.</p>
 <%- include('partials/footer.ejs') %>
