--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,3 +1,16 @@
 <%- include('partials/header.ejs') %>
-
+<h2>Contact Us</h2>
+<p>Feel free to reach out to us for any inquiries or questions. We're here to help!</p>
+<ul class="list-unstyled">
+    <li><i class="bi bi-geo-fill"></i> 123 Main Street, City, Country</li>
+    <li><i class="bi bi-telephone-fill"></i> Phone: +123-456-7890</li>
+    <li><i class="bi bi-envelope-fill"></i> Email: contact@yourwebsite.com</li>
+</ul>
+<p>Follow us on social media for the latest updates and news:</p>
+<ul class="list-inline">
+    <li class="list-inline-item"><a href="#"><i class="bi bi-facebook"></i></a></li>
+    <li class="list-inline-item"><a href="#"><i class="bi bi-twitter"></i></a></li>
+    <li class="list-inline-item"><a href="#"><i class="bi bi-instagram"></i></a></li>
+    <li class="list-inline-item"><a href="#"><i class="bi bi-linkedin"></i></a></li>
+</ul>
 <%- include('partials/footer.ejs') %>
