--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,5 +3,6 @@
     <p>© Nir Gluskin</p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="/js/client.js"></script>
  </body>
 </html>
