--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,19 +21,21 @@
         </div>
       </div>
     <% if (posts.length > 0) { %>
-        <% posts.forEach(post => { %>
-          <div class="col-md-3">
-            <div class="card" style="height: 100%;">
-              <div class="card-body d-flex flex-column">
-                <h5 class="card-title"><%= post.title %></h5>
-                <p class="card-text"><%= post.content %></p>
-                <div class="mt-auto">
-                  <button class="btn btn-info me-2">Edit</button>
-                  <button class="btn btn-danger">Delete</button>
+        <% posts.forEach((post , index) => { %>
+            <div class="col-md-3">
+                <div class="card h-100">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title"><%= post.title %></h5>
+                        <p class="card-text"><%= post.content %></p>
+                        <div class="d-flex mt-auto">
+                            <button class="btn btn-info me-2">Edit</button>
+                            <form class="remove-form" action="/remove/<%= index %>" method="post">
+                                <button type="submit" name="delBtn" class="btn btn-danger">Delete</button>
+                            </form>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
         <% }) %>
     <% } %>
 
