--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,7 +1,10 @@
 main {
-  height: 100vh;
   background-color: #F2ECBE;
   padding: 20px 20px;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 1fr;
 }
 
 nav {
