--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -5,6 +5,7 @@ main {
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 1fr;
+  gap: 20px;
 }
 
 nav {
