--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -9,6 +9,7 @@ main{
     grid-template-rows: repeat(3, 1fr);
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 1fr;
+    gap: 20px;
 }
 nav{
     background-color: $headerBg;
