--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,45 +1,39 @@
 <%- include('partials/header.ejs') %>
-<div class="container">
-    <div class="row">
-      <div class="col-md-3">
-        <div class="card" style="height: 100%;">
-          <div class="card-body">
-            <h5 class="card-title">Create a Post</h5>
-            <form action="/" method="post">
-              <div class="mb-3">
-                <label for="postTitle" class="form-label">Title</label>
-                <input type="text" class="form-control" id="postTitle" name="postTitle" placeholder="Enter title">
-              </div>
-              <div class="mb-3">
-                <label for="postContent" class="form-label">Content</label>
-                <textarea class="form-control" id="postContent" name="postContent" rows="3" placeholder="Enter content"></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-          </div>
-        </div>
-      </div>
-    <% if (posts.length > 0) { %>
-        <% posts.forEach((post , index) => { %>
-            <div class="col-md-3">
-                <div class="card h-100">
-                    <div class="card-body d-flex flex-column">
-                        <h5 class="card-title"><%= post.title %></h5>
-                        <p class="card-text"><%= post.content %></p>
-                        <div class="d-flex mt-auto">
-                            <form class="edit-post" action="/edit/<%= index %>" method="post">
-                                <button type="submit" name="editBtn" class="btn btn-info me-2">Edit</button>
-                            </form>
-                            <form class="remove-post" action="/remove/<%= index %>" method="post">
-                                <button type="submit" name="delBtn" class="btn btn-danger">Delete</button>
-                            </form>
-                        </div>
-                    </div>
+<div class="card">
+    <div class="card-body">
+        <h5 class="card-title">Create a Post</h5>
+        <form action="/" method="post">
+            <div class="mb-3">
+              <label for="postTitle" class="form-label">Title</label>
+              <input type="text" class="form-control" id="postTitle" name="postTitle" placeholder="Enter title">
+            </div>
+            <div class="mb-3">
+              <label for="postContent" class="form-label">Content</label>
+              <textarea class="form-control" id="postContent" name="postContent" rows="3" placeholder="Enter content"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+    </div>
+</div>
+<% if (posts.length > 0) { %>
+    <% posts.forEach((post , index) => { %>
+        <div class="card">
+            <div class="card-body text-center">
+                <h5 class="card-title"><%= post.title %></h5>
+                <p class="card-text"><%= post.content %></p>
+            </div>
+            <div class="card-footer d-flex justify-content-between">
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <div class="post-btns d-flex">
+                    <form class="edit-post" action="/edit/<%= index %>" method="post">
+                        <button type="submit" name="editBtn" class="btn btn-info me-2">Edit</button>
+                    </form>
+                    <form class="remove-post" action="/remove/<%= index %>" method="post">
+                        <button type="submit" name="delBtn" class="btn btn-danger">Delete</button>
+                    </form>
                 </div>
             </div>
-        <% }) %>
-    <% } %>
-
-    </div>
-  </div>
+        </div>
+    <% }) %>
+<% } %>
 <%- include('partials/footer.ejs') %>
