--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -24,6 +24,9 @@ nav{
         color: $secondBg !important;
     }
 }
+.card{
+    background-color: $secondBg;
+}
 footer{
     display: flex;
     justify-content: center;
